--- a/stat 153 proj model rita.Rmd
+++ b/stat 153 proj model rita.Rmd
@@ -172,7 +172,7 @@ The second-order differenced data looks more stationary than the first-order dif
 ## Model 2 (Ruojia Zhang)
 
 ```{r}
-model2 <- sarima(stock_300$Close, p = 1, d = 0, q = 1, P = 0, D = 1, Q = 2, S = 5)
+model2 <- sarima(diff_res, p = 1, d = 0, q = 1, P = 0, D = 1, Q = 2, S = 5)
 ```
 
 Comments:
@@ -193,28 +193,33 @@ model2$AICc
 model2$BIC
 ```
 
-```{r}
-length(diff_res)
-```
-
 We perform time-series cross validation on the last 100 data points. For the model, we generate forecasts for the 10 days in the selected 2 weeks and compute the sum of squares of errors of the forecasts. Then average the sum of squares of errors of forecasts over the days considered, which generates the mse of this model.
 
 ```{r}
-times = c(186, 196, 206, 216, 226, 236, 246, 256, 266, 276)
-sum_squared_errors <- 0
-for (timestep in times) {
-  train_set <- window(diff_res, end=timestep-0.001)
-  test_set <- window(diff_res, start=timestep, end=timestep + 10 - 0.01)
-  #
-  forecast <- sarima.for(train_set, n.ahead=10, p = 1, d = 0, q = 1, P = 0, D = 1, Q = 2, S = 5)$pred
-  #
-  sum_squared_errors = sum_squared_errors + sum((forecast - test_set)**2)
+# perform cross validation evaluation
+start_day <- 250
+end_day <- 290
+jump = 10
+error = 0
+forward_time = 10
+data = tail(stock$Close , 300)
+# we are performing n-fold validation 
+n = (end_day - start_day) / jump
+for (k in start_day:end_day) {
+  train <- window(data, end=k-0.001)
+  test <- window(data, start=k, end=k + forward_time - 0.01)
+  res_model <- sarima.for(diff_res, n.ahead = forward_time, p = 1, d = 0, q = 1, P = 0, D = 1, Q = 2, S = 5)
+  trend_prediction <- ses(train, alpha=0.9, h=forward_time)
+  res_prediction <- res_model$pred
+  print(trend_prediction)
+  error <- error + sum((res_prediction - test)**2)
+  k = k + 10
 }
 ```
 
 ```{r}
-mse_model2 = sum_squared_errors / 100
-mse_model2
+cv_model2 = error / n
+cat("cross validation error", cv_model2)
 ```
 
 
