--- a/153_proj.Rmd
+++ b/153_proj.Rmd
@@ -23,6 +23,7 @@ library(ggplot2)
 library(patchwork)
 library(astsa)
 library(TSA)
+library(forecast)
 set.seed(153) # make random results reproducible
 ```
 
@@ -108,13 +109,13 @@ With a comprehensive understanding of our data, we start to experiment and const
 
 ## Non-parametric Signal Model: exponential smoothing
 
-In this signal model, we choose exponential smoothing with weight $\alpha = 0.8$ and lag $k = 10$ and a seasonal differencing with period $d = 5$. 
+In this signal model, we choose exponential smoothing with weight $\alpha = 0.9$ and lag $k = 10$ and a seasonal differencing with period $d = 5$. 
 
 ```{r, fig.cap="(a): Time series plot of the original data and fitted values. (b): The residual plot of exponential smoothing.", fig.height=3}
 par(mfrow = c(1, 2), cex = 0.65, lwd = 0.8)
 
 # exponential filter 
-alpha = 0.8
+alpha = 0.9
 lag = 10
 filter_weights = alpha^(1:lag)
 filter_weights = filter_weights/sum(filter_weights)
@@ -130,17 +131,36 @@ res = log_stock - filtered_stock
 plot(res, main = "(b)", xlab = "Time", ylab = "Residuals")
 ```
 
-We experiment with different combinations of $\alpha$ and $k$ with a careful consideration of overfitting issue. we choose $k=10$ as the final value because we want to only use past two weeks, which are ten days in our data, to forecast. We choose $\alpha = 0.8$ as the final value because we think it best balances the smoothing effect and the capture of trend pattern among $(0,1)$. Indeed, the smoothing line in Figure 4(a) fits the data in the way that we want. Note that we lose the first nine time points due to the computation process of the exponential smoothing.
+We experiment with different combinations of $\alpha$ and $k$ with a careful consideration of overfitting issue. we choose $k=10$ as the final value because we want to only use past two weeks, which are ten days in our data, to forecast. We choose $\alpha = 0.9$ as the final value because we think it best balances the smoothing effect and the capture of trend pattern among $(0,1)$. Indeed, the smoothing line in Figure 4(a) fits the data in the way that we want. Note that we lose the first nine time points due to the computation process of the exponential smoothing.
 
 However, the residual plot Figure 4(b) is fairly non-stationary, as it has cycling fluctuation pattern and still slightly nonlinear trend. It might be due to that we intentionally let exponential smoothing not fit the data perfectly. Next, We use the seasonal differencing with period $d = 5$, which is one week in our data, to further make the residuals more stationary.
 
-```{r, results='hide', fig.cap="(a): Time series plot of the seasonal differenced (d = 5) residuals from the previous smoothing.", out.width="80%"}
+```{r, results='hide', fig.cap="(a): Time series plot of the seasonal differenced (d = 5) residuals from the previous smoothing.", out.width="80%", fig.height=3}
 # seasonal differencing
 diff_res = diff(res, lag = 5)
+par(cex = 0.65)
 plot(diff_res, main = "(a)", ylab = "Differenced Data")
 ```
 
-Indeed, now the differenced residuals become more stationary. There seems to be a contradiction that recalling in EDA, we claim that there is not a clear seasonality in our data. However, the effect of the seasonal differencing here implies a possible seasonality with period $d=5$. We think it is because the seasonal differencing is actually removing the remaining trend left by the exponential smoothing instead of the seasonality. Nevertheless, We believe that the time series of the differenced residuals shown in Figure 5(a) is stationary enough for us to build ARMA models on it.
+Indeed, now the differenced residuals become more stationary. There seems to be a contradiction that recalling in EDA, we claim that there is not a clear seasonality in our data. However, the effect of the seasonal differencing here implies a possible seasonality with period $d=5$. We think it might be due to that the seasonal differencing is actually removing the remaining trend left by the exponential smoothing instead of the seasonality. Nevertheless, We believe that the time series of the differenced residuals shown in Figure 5(a) is stationary enough for us to build ARMA models on it. For the convenience, we use "residuals" to represent "the seasonal differenced residuals" in the following two subsections. 
+
+### ARMA A: $ARIMA(1,0,3)\times(0,0,1)[5]$
+
+After acquiring a approximately stationary residuals from the signal model, we use ARMA model to further model the residuals so that we can predict future residuals reasonably. Then, summing the predicted residuals and signals gives us the prediction of the original time series, stock price. To obtain the intuition for choosing ARMA model, we use the sample ACF and PACF plots of the residuals shown in Figure TODO.
+
+```{r, fig.cap="The sample ACF and PACF plots of the residuals from expo. smoothing", out.width="75%", results='hide'}
+# sample ACF and PACF plots
+acf2(diff_res)
+
+auto.arima(diff_res)
+```
+In the ACF plot, if we ignore lag $5$ temporarily, we observe a sharp cutoff after lag $3$, so $q = 3$ might be a reasonable choice. Similarly, if we ignore the lags around the multiples of $5$ temporarily, the PACF plot has a cutoff after lag $1$, so $p = 1$ might be a reasonable choice. To handle the spikes at lag $5$ in ACF and lag multiples of $5$ in PACF, choosing seasonal $MA(1)$ with period $d = 5$ might be reasonable. To increase the credibility of our choices, we apply `auto.arima` on the residuals and receive an $ARIMA(2,0,3)\times(0,0,0)[5]$ model, which is close to our candidate model ARIMA(1,0,3)$\times$(0,0,1)[5].
+
+```{r, results='hide', fig.height=3, fig.cap="Model diagnostics plots of ARIMA(1,0,3)x(0,0,1)[5]"}
+model_A <- sarima(diff_res, p = 1, d = 0, q = 3, P = 0, D = 0, Q = 1, S = 5)
+```
+
+To assess our model, we visualize different model diagnostics methods in Figure TODO. In the ACF plot of residuals, almost all the spikes lie within 95% confidence interval. The normal Q-Q plot verifies the normality assumption as the points fit the blue line very well. The p-values of all the Ljung-Box statistics are above $0.05$, so we fail to reject the null hypothesis that the data was generated from our candidate ARMA model. In summary, all the model diagnostics methods imply that our candidate ARMA model is considerably reasonable. We call this model "ARMA A".
 
 ## Non-parametric Signal Model: second-order differencing 
 
