--- a/153-proj-model-added.Rmd
+++ b/153-proj-model-added.Rmd
@@ -183,10 +183,59 @@ trial$AICc
 trial$BIC
 ```
 
-From the performance of the model recommended by R presented above, we can see that the model does not pass the Ljung-Box test (all the p-values are below the blue band). Combined with my observations from the acf and pacf plots, I adjusted the model parameters and tried the lower the AIC, AICc, and BIC values of the model at the same time. In the end, keeping other parameters unchanged, I reduced the values for p and q from 2 to 1, and chose S = 5 and Q = 2, and the model presented p-values lying far beyond the blue band in the Ljung-Box statistic plot with relatively lower AIC, AICc, and BIC values than before:
+From the performance of the model recommended by R presented above, we can see that the model does not pass the Ljung-Box test (all the p-values are below the blue band). Combined with my observations from the acf and pacf plots, I adjusted the model parameters and tried the lower the AIC, AICc, and BIC values of the model at the same time. 
+
+Models considered:
 
 ```{r}
-model2 <- sarima(diff_res, p = 1, d = 0, q = 1, P = 0, D = 0, Q = 2, S = 5)
+attempt1 <- sarima(diff_res, p = 2, d = 0, q = 2, P = 0, D = 0, Q = 0, S = 5)
+# does not pass the Ljung-box test
+```
+```{r}
+attempt2 <- sarima(diff_res, p = 2, d = 0, q = 2, P = 1, D = 0, Q = 0, S = 5)
+# does not pass the Ljung-box test
+```
+
+```{r}
+attempt3 <- sarima(diff_res, p = 2, d = 0, q = 2, P = 0, D = 0, Q = 1, S = 5)
+```
+```{r}
+print(attempt3$AIC)
+print(attempt3$AICc)
+print(attempt3$BIC)
+# we want to lower the AIC, AICc, BIC values by keep adjusting the parameters
+```
+
+
+```{r}
+attempt4 <- sarima(diff_res, p = 1, d = 0, q = 2, P = 0, D = 0, Q = 1, S = 5)
+```
+```{r}
+print(attempt4$AIC)
+print(attempt4$AICc)
+print(attempt4$BIC)
+# we want to lower the AIC, AICc, BIC values by keep adjusting the parameters
+```
+
+```{r}
+attempt5 <- sarima(diff_res, p = 1, d = 0, q = 1, P = 0, D = 0, Q = 1, S = 5)
+```
+```{r}
+print(attempt5$AIC)
+print(attempt5$AICc)
+print(attempt5$BIC)
+# we want to lower the AIC, AICc, BIC values by keep adjusting the parameters
+```
+
+```{r}
+attempt6 <- sarima(diff_res, p = 0, d = 0, q = 0, P = 0, D = 0, Q = 1, S = 5)
+```
+From these previous attempts we can see that attempt 5 generates the lowest AIC, AICc, and BIC values, and passes the Ljung-Box test.
+
+In the end, keeping other parameters unchanged, I reduced the values for p and q from 2 to 1, and chose S = 5 and Q = 1, and the model presented p-values lying far beyond the blue band in the Ljung-Box statistic plot with relatively lower AIC, AICc, and BIC values than before:
+
+```{r}
+model2 <- sarima(diff_res, p = 1, d = 0, q = 1, P = 0, D = 0, Q = 1, S = 5)
 ```
 
 From the acf plot of the residuals, we can see that most of the sample residuals autocorrelations fit nicely inside the confidence band. From the normal q-q plot of the stanard residuals we can see that normal distribution is a convincing assumption. We also have large p-values that suggests weak groupwise residual autocorrelations in the plot for Ljung-Box statistic. The model seems like a good fit.
@@ -208,29 +257,43 @@ model2$BIC
 We then perform time-series cross validation. For this model, we generate forecasts for every 10 days (2 weeks) and compute the sum of squares of errors of the forecasts. Then average the sum of squares of errors of forecasts over the days considered, which generates the mse of this model.
 
 ```{r}
-# perform cross validation evaluation
-start_day <- 250
-end_day <- 290
-jump = 10
-error = 0
-forward_time = 10
-data = tail(stock$Close , 300)
-# we are performing n-fold validation 
-n = (end_day - start_day) / jump
-for (k in start_day:end_day) {
-  train <- window(data, end=k-0.001)
-  test <- window(data, start=k, end=k + forward_time - 0.01)
-  res_model <- sarima.for(diff_res, n.ahead = forward_time, p = 1, d = 0, q = 1, P = 0, D = 0, Q = 2, S = 5)
-  trend_prediction <- ses(train, alpha=0.9, h=forward_time)
-  res_prediction <- res_model$pred
-  print(trend_prediction)
-  error <- error + sum((res_prediction - test)**2)
-  k = k + 10
+# cross-validation
+start <- 200
+total_error <- 0
+
+for (i in 0:9) {
+  # train-val set split
+  train <- window(stock_300$Close, end = start + i * 10 - 0.01)
+  val <- window(stock_300$Close, start = start + i * 10, end = start + (i + 1) * 10- 0.01)
+  
+  # get stationary residuals
+  filtered_train = filter(train, filter_weights, sides = 1)
+  filtered_train = na.omit(filtered_train)
+  cut_train <- train[-1:-(lag - 1)]
+  exp_res = cut_train - filtered_train
+  
+  # exponential smoothing prediction
+  exp_pred = numeric(10)
+  values = tail(train, 10) # store the values for prediction
+  for (i in 1:10){
+    exp_pred[i] = sum(tail(values, 10) * rev(filter_weights)) 
+    values <- append(values, exp_pred[i])
+  }
+  
+  # ARMA prediction
+  arma_pred <- sarima.for(exp_res, n.ahead = 10,  p = 1, d = 0, q = 1, P = 0, D = 0, Q = 1, S = 5)
+
+  print(exp_pred)
+  print(arma_pred$pred)
+  m1_pred <- exp_pred + arma_pred$pred
+  total_error <- total_error + mean((m1_pred - val)^2)
 }
+
+total_error / 10
 ```
 
 ```{r}
-cv_model2 = error / n
+cv_model2 = total_error / 10
 cat("cross validation error", cv_model2)
 ```
 
